# bg-chat-minimal

./: LICENSE  README.md  pyproject.toml
bg_chat/: __init__.py  actions.py  agent.py  axtree.py  chat.py  cli.py  constants.py  observation.py
bg_chat/chat_files/: chatbox_modern.html
bg_chat/extension/: background.js  manifest.json  overlay-loader.js  overlay-main.js  sidepanel.css  sidepanel.html  sidepanel.js
bg_chat/javascript/: frame_mark_elements.js
